--- a/kerberos-openldap/1.database.md
+++ b/kerberos-openldap/1.database.md
@@ -31,24 +31,14 @@
 
 这个方案涉及 OpenLDAP 和 Kerberos KDC 两个身份认证源（两台服务器）；Linux 主机代表大数据集群的各个节点，由于其需要与 OpenLDAP 和 Kerberos KDC 进行通信，所以每一个 Linux 主机同时也是 OpenLDAP 和 Kerberos KDC 的客户端（客户端的安装会在后续章节中介绍）；参与人员有管理员和用户。方案整体的工作机制如下：
 
-```
-①：管理员会为用户创建 Kerberos 和 OpenLDAP 两个配套账号，并保证两个账号中的用户名部分相同。用户并不需要区分和记忆这两个账号，实际上，管理员只需要将两账号中相同的用户名部分和一个密码发送给用户即可，作为用户，只需要知道自己的用户名和密码即可（至于在登录过程中走的是 OpenLDAP 认证还是 Kerberos 认证，对用户来说其实是透明的）；
-
-②：将 Kerberos 的后台数据库迁移到 OpenLDAP 上，并将用户在这两个系统上的配套账号统一存储为一条记录（LDAP Entry）；
-
-③：配置并启用 SSSD，允许 Linux 主机（大数据集群各个节点）通过 SSSD 连接到 OpenLDAP 进行账号认证；
-
-④：完成上述操作后，用户就可以使用自己的用户名和密码以常规的 SSH 方式登录 Linux 主机（大数据集群各个节点）了，此时，用户的身份认证链路是：用户 -> Linux 主机 -> OpenLDAP；
-
-⑤：配置 SASL/GSSAPI，赋予 Kerberos 账号登录 OpenLDAP 的能力；
-
-⑥：配置 OpenLDAP 的账号映射规则，将 Kerberos 账号映射到目标 OpenLDAP 账号上，实现“账号（用户名）统一”；
-
-⑦：配置 saslauthd，让 OpenLDAP 委托 Kerberos 验证密码，实现“密码统一”；
-
-⑧：完成上述操作后，用户就可以使用自己的用户名和密码以 GSSAPI 方式 SSH 登录 Linux 主机（大数据集群各个节点）了，在登录的同时还将自动完成 Kerberos 认证，为提交大数据作业铺平了道路，此时，用户的身份认证链路是：用户 -> Linux 主机 -> Kerberos KDC；
-```
-
+- ①：管理员会为用户创建 Kerberos 和 OpenLDAP 两个配套账号，并保证两个账号中的用户名部分相同。用户并不需要区分和记忆这两个账号，实际上，管理员只需要将两账号中相同的用户名部分和一个密码发送给用户即可，作为用户，只需要知道自己的用户名和密码即可（至于在登录过程中走的是 OpenLDAP 认证还是 Kerberos 认证，对用户来说其实是透明的）；
+- ②：将 Kerberos 的后台数据库迁移到 OpenLDAP 上，并将用户在这两个系统上的配套账号统一存储为一条记录（LDAP Entry）；
+- ③：配置并启用 SSSD，允许 Linux 主机（大数据集群各个节点）通过 SSSD 连接到 OpenLDAP 进行账号认证；
+- ④：完成上述操作后，用户就可以使用自己的用户名和密码以常规的 SSH 方式登录 Linux 主机（大数据集群各个节点）了，此时，用户的身份认证链路是：用户 -> Linux 主机 -> OpenLDAP；
+- ⑤：配置 SASL/GSSAPI，赋予 Kerberos 账号登录 OpenLDAP 的能力；
+- ⑥：配置 OpenLDAP 的账号映射规则，将 Kerberos 账号映射到目标 OpenLDAP 账号上，实现“账号（用户名）统一”；
+- ⑦：配置 saslauthd，让 OpenLDAP 委托 Kerberos 验证密码，实现“密码统一”；
+- ⑧：完成上述操作后，用户就可以使用自己的用户名和密码以 GSSAPI 方式 SSH 登录 Linux 主机（大数据集群各个节点）了，在登录的同时还将自动完成 Kerberos 认证，为提交大数据作业铺平了道路，此时，用户的身份认证链路是：用户 -> Linux 主机 -> Kerberos KDC；
 
 我们将在第一篇文章完成第①、②两步操作；在第二篇文章完成第③、④步操作；剩余的第⑤、⑥、⑦、⑧四步操作将在第三篇文章中完成。其他未标记数字的操作均为常规机制，无需额外配置。
 
@@ -457,9 +447,7 @@ add_principal: DN is out of the realm subtree while creating "xxx"
 解决方法：调整 DN 到指定的 subtrees 下面，或调整 subtrees 的配置。提示：subtrees 支持以冒号分隔的多个 subtrees 列表。
 
 
-作者介绍：
-
-耿立超，架构师，多年系统开发与架构经验，对大数据、云计算、企业级应用、SaaS、分布式存储和领域驱动设计有丰富的实践经验，著有 《大数据平台架构与原型实现：数据中台建设实战》（https://item.jd.com/12677623.html）一书，个人技术博客：https://laurence.blog.csdn.net
+作者介绍：耿立超，架构师，多年系统开发与架构经验，对大数据、云计算、企业级应用、SaaS、分布式存储和领域驱动设计有丰富的实践经验，著有 《大数据平台架构与原型实现：数据中台建设实战》（https://item.jd.com/12677623.html）一书，个人技术博客：https://laurence.blog.csdn.net
 
 > 声明：本文来自infoq.cn，版权归作者所有。文章内容仅代表作者独立观点，不代表本网站立场，转载目的在于传递更多信息。如有侵权，请联系 anhk@ir0.cn。
 
