--- a/kerberos-openldap/2.sssd-ldap.md
+++ b/kerberos-openldap/2.sssd-ldap.md
@@ -20,7 +20,7 @@
 
 ## 3. 工作原理
 
-本文操作的主要对象是 SSSD（System Security Services Dameon，官网地址：https://sssd.io），它是一个工作在 Linux 系统上与 LDAP/AD 对接进行身份认证和账号缓存的服务，与直接同 LDAP 对接相比，SSSD 有如下一些优点：
+本文操作的主要对象是 SSSD（System Security Services Dameon，官网地址：[https://sssd.io](https://sssd.io)，它是一个工作在 Linux 系统上与 LDAP/AD 对接进行身份认证和账号缓存的服务，与直接同 LDAP 对接相比，SSSD 有如下一些优点：
 
 - 支持离线认证：当本地主机与 LDAP 服务器断网的情况下，用户依然可以登录
 - 减轻 LDAP 服务器的负载：通过 SSSD，一台 Linux 主机仅与 LDAP 服务器建立一个连接
