--- a/kerberos-openldap/2.sssd-ldap.md
+++ b/kerberos-openldap/2.sssd-ldap.md
@@ -88,7 +88,10 @@ authconfig --enablesssd --enablesssdauth --enablemkhomedir --enablerfc2307bis --
 
 正确控制 pam_sss.so 和 pam_ldap.so 相关配置项的做法是：在每次执行 authconfig 时，总是使用--enableforcelegacy 和--updateall 两个选项，通过 enable 或 disable ldapauth 与 sssdauth 可以精确控制与 pam_sss.so 和 pam_ldap.so 有关的四项配置，具体逻辑是：
 
-> --enableldapauth：将会在/etc/pam.d/system-auth 和/etc/pam.d/password-auth 追加 pam_ldap.so 相关的 4 项配置--disableldapauth：将会在/etc/pam.d/system-auth 和/etc/pam.d/password-auth 移除 pam_ldap.so 相关的 4 项配置--enablesssdauth：将会在/etc/pam.d/system-auth 和/etc/pam.d/password-auth 追加 pam_sss.so 相关的 4 项配置--disablesssdauth：将会在/etc/pam.d/system-auth 和/etc/pam.d/password-auth 移除 pam_sss.so 相关的 4 项配置
+- --enableldapauth：将会在/etc/pam.d/system-auth 和/etc/pam.d/password-auth 追加 pam_ldap.so 相关的 4 项配置
+- --disableldapauth：将会在/etc/pam.d/system-auth 和/etc/pam.d/password-auth 移除 pam_ldap.so 相关的 4 项配置
+- --enablesssdauth：将会在/etc/pam.d/system-auth 和/etc/pam.d/password-auth 追加 pam_sss.so 相关的 4 项配置
+- --disablesssdauth：将会在/etc/pam.d/system-auth 和/etc/pam.d/password-auth 移除 pam_sss.so 相关的 4 项配置
 
 再次提醒一下，以上情形只在启用了--enableforcelegacy 和--updateall 的前提下才有效。由于我们使用了--disableforcelegacy，所以不必手动修改/etc/pam.d/system-auth 和/etc/pam.d/password-auth 两个文件，只需要简单执行上面的 authconfig 命令即可。authconfig 命令执行完毕后，可以通过下面的命令查看一下当前配置，从输出的信息可以判断出哪些认证模块被启用哪些没有：
 
