--- a/kerberos-openldap/2.sssd-ldap.md
+++ b/kerberos-openldap/2.sssd-ldap.md
@@ -132,9 +132,9 @@ override_homedir = /home/%u
 default_shell = /bin/bash
 ```
 
-“override_homedir = /home/%u”用于配置 LDAP 用户登录 Linux 后的 home 目录，当用户初次登录时，系统会根据这里的配置为用户创建 home 目录，其中 %u 表示用户名。自动创建 home 目录的功能是通过安装 oddjob-mkhomedir 实现的，这个安装包中有一个名为 pam_oddjob_mkhomedir.so 的库，authconfig 命令就是利用这个库创建 home 目录的。
+`override_homedir = /home/%u`用于配置 LDAP 用户登录 Linux 后的 home 目录，当用户初次登录时，系统会根据这里的配置为用户创建 home 目录，其中 %u 表示用户名。自动创建 home 目录的功能是通过安装 oddjob-mkhomedir 实现的，这个安装包中有一个名为 pam_oddjob_mkhomedir.so 的库，authconfig 命令就是利用这个库创建 home 目录的。
 
-“default_shell = /bin/bash”用于配置同步的 LDAP 用户在 Linux 下的默认 shell，这里我们统一使用 bash shell。
+`default_shell = /bin/bash`用于配置同步的 LDAP 用户在 Linux 下的默认 shell，这里我们统一使用 bash shell。
 
 此外，如果配置过程中出现错误，详细的日志信息对排查错误非常重要，此时，可以通过以下的配置项提升日志输出的详细度：
 
